// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-document should handle moving non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`move-document should handle moving to non-existent target 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`move-document should move a document to another root document 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
